--- a/L06_PuzzleGame/styles.css
+++ b/L06_PuzzleGame/styles.css
@@ -1,16 +1,50 @@
-html, body {
+html,
+body {
   padding: 0px;
   margin: 0px;
   width: 100%;
   height: 100%;
- overflow: hidden;
+  overflow: hidden;
 }
 
-dialog { 
-  text-align: center; 
+dialog {
+  text-align: center;
 }
 
-canvas.fullscreen { 
-  width: 100vw; 
-  height: 100vh; 
+canvas.fullscreen {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  z-index: 1;
+  pointer-events: all;
+}
+.wrapper {
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  z-index: -1;
+  pointer-events: none;
+}
+
+.wrapper .crosshair {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  transform: translate(-50%, -50%);
+  height: 14px;
+  width: 1px;
+  background-color: rgba(40, 209, 62, 1);
+  pointer-events: none;
+}
+.wrapper .crosshair::after {
+  position: absolute;
+  content: "";
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  transform: translate(-50%, -50%);
+  height: 1px;
+  width: 14px;
+  background-color: rgba(40, 209, 62, 1);
 }
