--- a/JumpAndHook/styles.css
+++ b/JumpAndHook/styles.css
@@ -26,6 +26,21 @@ canvas.fullscreen {
   pointer-events: none;
 }
 
+.wrapper #ui {
+  position: absolute;
+  z-index: 3;
+  top: 0px;
+  left: 0px;
+}
+
+input[type="text"] {
+  font-size: 30px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
+  background: transparent;
+  border: none;
+}
+
 .wrapper .crosshair {
   position: absolute;
   left: 50%;
