--- a/JumpAndHook/styles.css
+++ b/JumpAndHook/styles.css
@@ -23,7 +23,6 @@ canvas.fullscreen {
   height: 100vh;
   position: relative;
   z-index: -1;
-  pointer-events: none;
 }
 
 .wrapper #ui {
@@ -33,6 +32,58 @@ canvas.fullscreen {
   left: 0px;
 }
 
+#menu {
+  position: absolute;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.visible {
+  z-index: 4;
+  opacity: 1;
+  visibility: visible;
+  background-color: rgb(121, 121, 121);
+}
+
+.hidden {
+  z-index: 0;
+  opacity: 0;
+  visibility: hidden;
+}
+#start {
+  z-index: 4;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 10px;
+  color: white;
+  font-size: 40px;
+  background-color: rgba(1, 1, 1, 0);
+  border: 0;
+}
+.score {
+  color: white;
+  font-size: 30px;
+  padding: 10px;
+}
+#start:hover {
+  color: green;
+}
+#options {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 30px;
+  padding: 10px;
+}
+#credits {
+  color: rgba(1, 1, 1, 0.5);
+}
 input[type="text"] {
   font-size: 30px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
